--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,9 +1,9 @@
 .header {
 	height: 80px;
-	background-color: rgba(0,0,0, 0.8);
-	top: $gutter;
-    left: $gutter;
-    right: $gutter;
+	background-color: rgba(0,0,0, 0.9);
+	top: 0;
+    left: 0;
+    right: 0;
 	position: fixed;
 	z-index: 10;
 }
