--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -1,9 +1,13 @@
-.landing {
-	position: absolute;
-	top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+#content, .landing {
+    margin: 0;
+    height: 100%;
+    min-height: 100%;
+}
+
+
+.splash {
+    position: relative;
+    height: 100%;
 	@include full-background-image("../images/cafe.jpg");
 
 
