--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 @import "config";
 @import "utilities";
 @import "base";
+@import "grid";
 @import "typography";
 @import "forms";
 @import "landing";
