--- a/app/scripts/views/pages/landing.html
+++ b/app/scripts/views/pages/landing.html
@@ -1,1 +1,34 @@
-<div class="logo"></div>
+    <div class="splash">
+		
+    </div>
+
+    <div class="container">
+    	<div class="row">
+    		<div class="span12">
+    			<h1>Chi Siamo ?</h1>
+
+    			<div>
+    				<p>Un luogo di confronto, una finestra su culture, tradizioni ed espressioni d’arte diverse, dove il tempo scorre più lentamente</p>
+
+					<p>Il cafè de la paix oltre ad essere un café è anche uno spazio produttivo e un contenitore espositivo.</p>
+
+					<p>Di progetti legati a design, arte, fotografia, sostenibilità. Ma soprattutto uno spazio dallo stile urban retrò contemporaneo dove tutto ciò che trovate è stato elaborato e ...</p>
+
+					</p>
+    			</div>
+    		</div>
+    	</div>
+
+	    <div class="row">
+    		<div class="span12">
+    			<h1>Caffe & Restaurante</h1>
+
+    			<div>
+    				<p>Sempre aperto da colazione con torte e biscotti fatti in casa a cena e dopocena con aperitivi e cocktels...</p>
+						
+    				<p>Da sempre il Café ha dato grande importanza alla proposta gastronomica, scegliendo così la strada della produzione casalinga sia di ricette salate che dolci. Piatti semplici freschi e di grande qualità.</p>
+    			</div>
+    		</div>
+    	</div>
+
+	</div>
