--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,5 +1,21 @@
-html, body {
+html {
+    font-family: 'Lato', sans-serif;
+    //font-family: 'Raleway', sans-serif;
+    //font-family: Corbert, sans-serif; /* 1 */
+    //-webkit-text-size-adjust: 100%; /* 2 */
+    //-ms-text-size-adjust: 100%; /* 2 */
     height: 100%;
+    min-height: 100%;
+}
+
+/**
+ * Remove default margin.
+ */
+
+body {
+    margin: 0;
+    height: 100%;
+    min-height: 100%;
 }
 
 $gutter: 20px;
