edit landing page

--- a/app/scripts/views/controls/header.html
+++ b/app/scripts/views/controls/header.html
@@ -1,8 +1,7 @@
 <div class="background"></div>
 
 <ul class="navigation">
-	<li><a href="/#/restaurante">Restaurante & Bar</a></li>
-	<li><a href="/#/eventi">Eventi</a></li>
-	<li><a href="/#/contacti">Contacti</a></li>
-	<li><a href="/#/tessera">Tessera</a></li>
+	<li><a href="#restaurante">Cafe Restaurante</a></li>
+	<li><a href="#eventi">Eventi</a></li>
+	<li><a href="#contacti">Contacti</a></li>
 </ul>
