--- a/app/scripts/views/pages/landing.html
+++ b/app/scripts/views/pages/landing.html
@@ -1,5 +1,5 @@
     <div class="splash">
-		
+		<div class="logo"></div>
     </div>
 
     <div class="container">
@@ -19,9 +19,11 @@
     		</div>
     	</div>
 
+    	<div class="section-break"></div>
+
 	    <div class="row">
     		<div class="span12">
-    			<h1>Caffe & Restaurante</h1>
+    			<h1>Cafe & Restaurante</h1>
 
     			<div>
     				<p>Sempre aperto da colazione con torte e biscotti fatti in casa a cena e dopocena con aperitivi e cocktels...</p>
@@ -31,4 +33,20 @@
     		</div>
     	</div>
 
-	</div>
+    	<div class="section-break"></div>
+
+    	<div class="row">
+    		<div class="span12">
+    			<h1>Eventi</h1>
+    			<div class="event-container"></div>
+    		</div>
+    	</div>
+    </div>
+	
+    <img class="full-image" src="../images/downstairs.jpg" />
+  
+    <div class="container">
+    	<div class="row">
+    		<div class="span12"></div>
+    	</div>
+    </div>
