--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -31,6 +31,14 @@
             repeat: no-repeat;
         } 
     }
+}
 
+
+.container {
+    margin: 3em auto 5em auto;
+}
+
+.full-image {
+    width: 100%;
 }
 
