--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -23,6 +23,11 @@ h1,h2 {
     font-weight: lighter;
 }
 
+p {
+  font-family: 'ProximaNova';
+  font-weight: lighter;
+}
+
 
 /* ==========================================================================
    Typography
