--- a/app/scripts/views/controls/header.html
+++ b/app/scripts/views/controls/header.html
@@ -1,7 +1,10 @@
 <div class="background"></div>
 
 <ul class="navigation">
+	<li><a href="#chi">Chi siamo</a></li>	
 	<li><a href="#restaurante">Cafe Restaurante</a></li>
 	<li><a href="#eventi">Eventi</a></li>
-	<li><a href="#contacti">Contacti</a></li>
+	<li><a href="#contatti">Contatti</a></li>
 </ul>
+
+<div class="fb-like" data-href="https://www.facebook.com/CafedelaPaixTN" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
