--- a/app/scripts/views/pages/landing.html
+++ b/app/scripts/views/pages/landing.html
@@ -1,9 +1,18 @@
     <div class="splash">
+		
+    	<div class="nivoSlider">
+    		<img src="../images/cafe.jpg">
+			<!--img src="../images/downstairs.jpg">
+        	<img src="../images/downstairs-wine.jpg"-->
+		</div>
+
 		<div class="logo"></div>
     </div>
 
+    
+
     <div class="container">
-    	<div class="row">
+    	<div class="row" id="chi">
     		<div class="span12">
     			<h1>Chi Siamo ?</h1>
 
@@ -21,7 +30,7 @@
 
     	<div class="section-break"></div>
 
-	    <div class="row">
+	    <div class="row" id="restaurante">
     		<div class="span12">
     			<h1>Cafe & Restaurante</h1>
 
@@ -35,7 +44,7 @@
 
     	<div class="section-break"></div>
 
-    	<div class="row">
+    	<div class="row" id="eventi">
     		<div class="span12">
     			<h1>Eventi</h1>
     			<div class="event-container"></div>
@@ -46,7 +55,30 @@
     <img class="full-image" src="../images/downstairs.jpg" />
   
     <div class="container">
+    	
     	<div class="row">
-    		<div class="span12"></div>
+    		<div class="span12">
+    			<h1>Contatti</h1>
+    		</div>
     	</div>
+
+    	<div class="row">
+    		<div class="span6 contatti" id="contatti">
+    			<p><a href="http://maps.google.com/maps?ll=46.07074,11.12501&z=16&t=m&hl=en-US&gl=US&mapclient=embed&iwloc=lyrftr:m,7782320889676166441,46.07074,11.12501" target="_blank">Passaggio Teatro Osele 6/8,<br> 38122 Trento, Italy</a></p>
+    			<p>Tel: +39 0461 982520</p>
+				<ul class="times">
+					<li><strong>Lunedi - Venerdi:</strong>  8:30 - 00:00</li>
+					<li><strong>Sabato:</strong>  10:30 - 00:00</li>
+					<li><strong>Domenica:</strong>  17:30 - 00:00</li>
+				</ul>
+
+				<div class="fb-like" data-href="https://www.facebook.com/CafedelaPaixTN" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div>
+    		</div>
+    		<div class="span6">
+    			<div>
+    				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2768.0151041993363!2d11.12501!3d46.07074!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478271354b9932a5%3A0x6c005b9ddd3ff529!2spassaggio+teatro+osele+6%2F8+38122+Trento%2C+Italy!5e0!3m2!1sen!2s!4v1386267019890" width="400" height="300" frameborder="0" style="border:0"></iframe>
+    			</div>
+    		</div>
+    	</div>
+
     </div>
