--- a/app/scripts/views/pages/landing.html
+++ b/app/scripts/views/pages/landing.html
@@ -1,7 +1,7 @@
     <div class="splash">
 		
     	<div class="nivoSlider">
-    		<img src="/../images/cafe.jpg">
+    		<img src="/images/cafe.jpg">
 			<!--img src="../images/downstairs.jpg">
         	<img src="../images/downstairs-wine.jpg"-->
 		</div>
@@ -52,7 +52,7 @@
     	</div>
     </div>
 	
-    <img class="full-image" src="/../images/downstairs.jpg" />
+    <img class="full-image" src="/images/downstairs.jpg" />
   
     <div class="container">
     	
