--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -1,18 +1,18 @@
 @font-face {
   font-family: ProximaNova;
-  src: url('/../fonts/ProximaNova-Regular.otf');
+  src: url('/fonts/ProximaNova-Regular.otf');
   font-weight: 600;
 }
 
 @font-face {
   font-family: ProximaNova;
-  src: url('/../fonts/ProximaNova-Light.otf');
+  src: url('/fonts/ProximaNova-Light.otf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: ProximaNova;
-  src: url('/../fonts/ProximaNova-Bold.otf');
+  src: url('/fonts/ProximaNova-Bold.otf');
   font-weight: 900;
 }
 
